--- a/src/app/users/modals/data-modal/data-modal.component.html
+++ b/src/app/users/modals/data-modal/data-modal.component.html
@@ -3,7 +3,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLongTitle">User Details</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"  (click)="closeModal('dismiss')">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"  (click)="closeModal()">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -17,7 +17,7 @@
             <p><b>Profile Picture : </b></p><img style="width: 100px;height: 100px;" src="{{fromParent.profilePicture}}" />
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-outline-danger" data-dismiss="modal" (click)="closeModal('close')">Close</button>
+          <button type="button" class="btn btn-outline-danger" data-dismiss="modal" (click)="closeModal()">Close</button>
           <button type="button" class="btn btn-outline-primary" (click)="saveData()">Save changes</button>
         </div>
       </div>
